[package]
name = "ledger-fidelity-401k-parser"
description = 'Converts Fidelity 401K CSV statements to Ledger plaintext accounting format'
repository = 'https://github.com/colindean/ledger-fidelity-401k-parser'
version = "0.1.0"
authors = ["Colin Dean <git@cad.cx>"]
edition = '2015'
license = "CC-PDDC"

[dependencies]
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
steel-cent = "0.2"
chrono = "0.4"
